# unir

./: .gitignore  octave-workspace
algoritmos-avancados/: .gitignore
algoritmos-avancados/av2/: 1.in  1.out  2.in  3.in  4.in  a.out  main.cpp  main2.cpp
algoritmos-avancados/bisection/: CMakeLists.txt
algoritmos-avancados/bisection/source/: base.cpp
algoritmos-avancados/coin-chanllenge/: a.out  main.cpp
algoritmos-avancados/desaf1/: CMakeLists.txt  t.py
algoritmos-avancados/lcs/: 1.out  a.out  rec-pd-it.cpp  rec-pd.cpp  rec.cpp
algoritmos-avancados/wedding-shop/: a.out  main.cpp
algoritmos-avancados/winter-backpacking/: 1.in  a.out  base.cpp
arquitetura-de-computadores/atividades/: Fig 3.11.circ  Fig 3.13.circ  Fig 3.14.circ  Fig 3.15.circ  Fig 3.16.circ  Fig 3.17.circ  Fig 3.5.circ  Fig 3.7.circ  Fig 3.8.circ  ula_1_bit_ivo.circ  ula_8_bits_ivo.circ
calcnum/09-01/: f1.m  switchex.m
calcnum/09-08/: soma.m
calcnum/09-29/: plotzada.m  secante.m
calcnum/atividade1/: 1.m  6.m  7.m
calcnum/atividade2/: questao1.m  questao2.m  questao6.m  questao7.m  questao8.m
calculo-numerico/: a.m  binTodec.m  conversao.m  derivada-parcial.m  octave-workspace  rova.m
calculo-numerico/09-01/: baskhara.m  graificos.m
calculo-numerico/09-08/: atividade.m  b2d.m  d2b.m
calculo-numerico/09-22/: fcn.m
calculo-numerico/09-29/: newton.m
calculo-numerico/10-06/: falsapos.m  pontofixo.m
calculo-numerico/10-13/: eliminacao.m  substituicaoReversa.m
calculo-numerico/10-20/: eliminacao_gauss.m  fLU.m  jordan.m  pivotParcial.m
calculo-numerico/11-10/: atividade.m  jacobi.m  jacobi2i.m  matrizM.m
calculo-numerico/12-01/: F_x.m  J_x.m  grafico-polinomio.m  interpolacao.m  lagrange.m  newton_naolinear.m  octave-workspace
calculo-numerico/12-08/: gera_grafico.m  mmq.m  mmq_polinomial.m  octave-workspace
calculo-numerico/atividade1/: 1.m  2.m  3.m  4.m  6.m  7.m  8.m  b2d.m
calculo-numerico/atividade2/: as.m  bissecao.m  questao1.m  questao2.m  questao3.m  questao4.m  questao5.m  questao6.m  questao7.m  questao8.m
calculo-numerico/atividade3/: eliminacaoGaussiana.m  octave-workspace  questao1.m  questao2.m  questao3.m  questao4.m  questao5.m  questao6.m  questao7.m  substituicaoDireta.m  triangulador.m  verificaTriangulacao.m  verificaTriangulacaoBaixo.m  verificaTriangulacaoCima.m
calculo-numerico/atividade4/: questao1.m  questao2.m  questao3.m  questao4.m
calculo-numerico/atividade5/: octave-workspace  questao1.txt  questao3.m
calculo-numerico/atividade6/: octave-workspace  questao2.m  questao3.m  questao4.m  questao5.m  questao6.m  questao7.m
calculo-numerico/prova2/: derivparc.m
computacao-grafica/: Lista-1.odt  ivo-vieira-atividade-cg-12-12.odt
computacao-grafica/atv-16-12/: CMakeLists.txt  main.cpp  main_1.cpp
computacao-grafica/atv-30-12/: CMakeLists.txt  main.cpp
computacao-grafica/atv-30-12-2/: CMakeLists.txt  main.cpp
computacao-grafica/aula-1/: main.cpp
computacao-grafica/finalcg/: CMakeLists.txt
computacao-grafica/finalcg/Glitter/Headers/: animation.hpp  animator.hpp  animdata.hpp  assimp-glm-helpers.hpp  bone.hpp  filesystem.hpp  mesh.hpp  model_animation.hpp  shader.hpp
computacao-grafica/finalcg/Glitter/Shaders/: anim-shader.frag  anim-shader.vert  triangle-shader.frag  triangle-shader.vert
computacao-grafica/finalcg/Glitter/Sources/: animation.cpp  animator.cpp  assimp-glm-helpers.cpp  bone.cpp  filesystem.cpp  main.cpp  mesh.cpp  model_animation.cpp
computacao-grafica/finalcg/Glitter/Sources/Animation/Amber/: Amber.gltf
computacao-grafica/finalcg/Glitter/Sources/Animation/BMB/: BMB.gltf
computacao-grafica/finalcg/Glitter/Sources/Jogger/: scene.gltf
computacao-grafica/ogl-tmpl/: CMakeLists.txt
computacao-grafica/ogl-tmpl/includes/: tga_load.h
computacao-grafica/ogl-tmpl/src/cpp/: main.cpp  tga_load.cpp
computacao-grafica/ogl-tmpl/src/textures/: ogl-tmpl  unir.tga
computacao-grafica/template/: main.cpp
computacao-grafica/trabalho/: CMakeLists.txt  main.cpp
dblab/: .project  docker-compose.yml
dblab/.dbeaver/: .credentials-config.json.bak  .project-metadata.json.bak  data-sources.json  project-metadata.json
dblab/Scripts/: 02-create-schema-aula.sql  03-create-table-aula-cliente.sql  05-insert-table-aula-cliente.sql
estrutura-de-dados-ii/: .gitignore  README.md  Simulação Notas EDII.ods
estrutura-de-dados-ii/aulas/: README.md
estrutura-de-dados-ii/praticas/: README.md
estrutura-de-dados-ii/trabalhos/: README.md
inteligencia-artificial/06.22.2021/: ex5.m  fat.m  fibo.m  t.m
inteligencia-artificial/P1/: ex1.m  ex2.m  ex3.m  ex4.m
inteligencia-artificial/P2/: Editavel.odt  res.txt  t.txt  test.txt  teste.m  treinamento.m
inteligencia-artificial/P3/: EQM.m  teste.m  teste.txt  treinamento.m  treinamento.txt
inteligencia-artificial/P4/: teste.m  teste.txt  treinamento.m  treinamento.txt
inteligencia-artificial/P6/: p6.fis  p6.m
introducao-ao-desenvolvimento-web/: resenha.odt
introducao-ao-desenvolvimento-web/a1/: package.json
introducao-ao-desenvolvimento-web/a2/: .eslintrc.js  .gitignore  README.md  next.config.js  package.json
introducao-ao-desenvolvimento-web/proj-2-slide-4/: .env
introducao-ao-desenvolvimento-web/proj-slide-4/: .env  package.json
introducao-ao-desenvolvimento-web/proj-slide-5/: .env  package.json
introducao-ao-desenvolvimento-web/trabalho-6/: package.json
introducao-ao-desenvolvimento-web/trabalho-8/: package.json
laboratorio-de-banco-de-dados/: docker-compose.yml
laboratorio-de-banco-de-dados/.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  .project-metadata.json.bak  (+4 more)
processamento-de-imagens/: bilateral.m  colorchannel.m  detect.m  detect2.m  detect3.m  h2r.m  limiar_global.m  movingthresh.m  otsu.m  r2h.m  r2y.m  resize.m  rotation.m  tform.m  viz.m  warp.m  wave.m  wave1.m  y2r.m
programacao-para-dispositivos-moveis/: .gitmodules  README.md
seguranca-da-informacao/: seginfo-1.odt
sisdist/: ivo-vieira-atividade-1.odt
sistemas-distribuidos/: trabalho-1-grpc.odt
transmissao-de-dados/: atividade4-1.asc  atividade4-2.asc
(+870 files in other folders)
